# equiboots_docs

./: .coverage.RELMDOXADM36475.118.XoFCBsdx  .gitignore  LICENSE.md  Makefile  README.MD  README.md  pyproject.toml  requirements.txt  requirements_full.txt
.github/: workflow.yml
docs/: .buildinfo.bak  acknowledgements.html  bootstrapped_estimates.html  bootstrapped_metrics.html  changelog.html  citations.html  contributors.html  equiboots_class.html  equiboots_stats_classes.html  genindex.html  getting_started.html  index.html  ipynb_notebooks.html  mathematical_framework.html  model_to_pred.html  model_to_pred.rst.html  objects.inv  point_estimate_metrics.html  py-modindex.html  references.html  search.html  searchindex.js
notebooks/: adult_income_bias_fairness.ipynb  adult_income_classification.ipynb  adult_income_updatd_colab_example.ipynb  df.parquet  eq_plot_roc_auc.ipynb  equi_boots_plots.ipynb  equiboots_tables.ipynb  test_plot_exceptions.ipynb
public_data/: adult.csv  adult_predictions.csv  disparity_metrics.csv  y_pred.csv  y_prob.csv
py_scripts/: EquiBoots.py  adult_income_xgbearly.py  bootstrapplottest.py  functions.py  metrics.py  plots.py  testingscript.py
source/: acknowledgements.rst  bootstrapped_estimates.rst  bootstrapped_metrics.rst  changelog.rst  citations.rst  conf.py  contributors.rst  equiboots_stats_classes.rst  getting_started.rst  index.rst  model_to_pred.rst  point_estimate_metrics.rst  references.rst
src/: EquiBoots.py  __init__.py
unittests/: test_EquiBoots.py  test_custom_help.py  test_metrics.py  test_plots.py
(+33 files in other folders)
